[package]
name = "clib-curl-rs"
version.workspace = true
edition.workspace = true
crate-type = ["staticlib"]

[dependencies]
lib-curl-rs = { path = "../lib-curl-rs"}

[lib]
path = "lib.rs"
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = { version = "0.29.0", default-features = false, features = ["unstable_ir"] }
